--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="calc.php"> Хочу потыкать в калькулятор</a> <br /><br />
     <a href="cat.html"> О нас и нашем коте</a> <br /><br />
     <a href="click.php"> посчитать щелчки</a> <br /><br />
+    Выставление счета : В разработке
 </body>
 </html>
