--- a/cat.html
+++ b/cat.html
@@ -30,7 +30,7 @@
 		<a href="http://yandex.ru"> Подробнее ищи сам</a> <br /><br />
 		<a href="demo.php"> А вот тут пока ничего нет</a> <br /><br />
 		<a href="HelloPHP.php"> Поздароваться</a> <br /><br />
-		<a href="calc.html"> Хочу потыкать в калькулятор</a> <br /><br />
+		<a href="calc.php"> Хочу потыкать в калькулятор</a> <br /><br />
 		<img src="img/Cat.jpg" style="width: 200px" onmouseover="meaw();" onmouseout="nomeaw();"/>
 		<br />
 		<button onclick="sayHello();""> Нажми меня </button>
