--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <a href="login.php"> Войти</a> 
     <a href="LogOut.php"> Выйти</a> <br /><br />
+    <a href="Reg.php"> Зарегистрироваться</a> <br /><br />
     <h1>кунаи и сюрикены</h1>
     <p>Добро пожаловать, Синоби</p>
     <a href="demo.php"> Вот тут пока ничего нет</a> <br /><br />
