--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <a href="calc.php"> Хочу потыкать в калькулятор</a> <br /><br />
     <a href="cat.html"> О нас и нашем коте</a> <br /><br />
     <a href="click.php"> посчитать щелчки</a> <br /><br />
-    Выставление счета : В разработке
+    <a href="billing.php"> Твой счет</a> <br /><br />
 </body>
 </html>
