--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="cat.html"> О нас и нашем коте</a> <br /><br />
     <a href="click.php"> посчитать щелчки</a> <br /><br />
     <a href="billing.php"> Твой счет</a> <br /><br />
-    <a href="API/billingAPI.php"> Твой счет через JSON</a> <br /><br />
+    <a href="Billing2.php">Посмотреть подробную историю операций</a> <br /><br />
     <a href="StokInformer.php"> Текущий курс</a> <br /><br />
 </body>
 </html>
